--- a/style.css
+++ b/style.css
@@ -4,29 +4,26 @@
 }
 
 body {
-  background-color: red;
+  background-color: #eee;ndex.html
 }
 
 .wrapper{
   margin: 0 auto 0 60px;
-  height: 500px;
   width: 1000px;
-  background-color: white;
+  background-color: red;
 }
-.img-welcome{
-  width: 400px;
-  height:300px;
-  background-image: url(wel.png);
-  background-size:contain;
+.img-sun{
+  width: 300px;
+  height:100px;
+  background-image: url(img/index.jpeg);
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.img-welcome:hover{
-  height:800px;
-  width: 800px;
-  background-size:contain;
-  background-position:center;
+.img-sun:hover{
+  background-size: 100%;
+  background-position: center;
 }
 nav {
   width: 100%;
